--- a/CustomerChurn.ipynb
+++ b/CustomerChurn.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPwIp/dLhilyhOu6xEsfFTd",
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -11651,16 +11649,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mohamedchahed/ML-projects/blob/main/CustomerChurn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# 📖 Background"
       ],
@@ -11701,7 +11689,7 @@
         "id": "J22KQdKiBvsy",
         "outputId": "6b0ebfa8-f0f9-4b73-b51d-c8e6b28225cb"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12023,7 +12011,7 @@
         "id": "ooOtJw4byjBc",
         "outputId": "727b9fa7-75d3-42ee-d6ac-99cd1bf64aea"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12120,7 +12108,7 @@
         "id": "rym1SN5V3AA_",
         "outputId": "cb8a1465-28c6-4c11-aa97-664fecee55d3"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -12269,7 +12257,7 @@
         "id": "Uy2BX_8r9bw1",
         "outputId": "f6faba4d-b033-4b22-fdd2-02c8cfdfc776"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12333,7 +12321,7 @@
         "id": "6ePsdleS9b8L",
         "outputId": "fe66941b-ea1a-4833-899a-54e6e4d80de8"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12392,7 +12380,7 @@
         "id": "gUn_prIxxTD4",
         "outputId": "b1af89d1-5f9d-4e85-8424-29ccb20cc3c6"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
